assets/styles/main.css
@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Francois+One&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html,
body {
    height: 100dvh;
    background: rgb(57, 47, 90);
    background: linear-gradient(36deg, rgba(57, 47, 90, 1) 0%, rgba(239, 71, 111, 1) 100%);
    overflow: hidden;
}

h1,
h2 {
    font-family: Francois one;
    color: white;
}

.element_container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    height: 100dvh;
}

#Logo_main_page {
    width: 80%;
    height: auto;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 100px;
}

.buttons_container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    height: 22%;
    margin-bottom: 20%;
}

.button {
    background: rgb(255, 136, 17);
    background: linear-gradient(280deg, rgba(255, 136, 17, 1) 0%, rgba(239, 71, 111, 1) 100%);
    border: none;
    color: white;
    padding: 10px 16px;
    margin: 5% 0;
    text-align: center;
    border-radius: 100px;
    text-decoration: none;
    display: inline-block;
    font-size: 35px;
    font-family: "Francois One", sans-serif;
    width: 50vw;
    /* border: solid rgb(255, 136, 17) 5px; */
    /* filter: drop-shadow(0px 0px 5px #EF467F); */
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    -webkit-tap-highlight-color: transparent;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

a:-webkit-any-link:focus-visible {
    outline-offset: 0;
}

:focus-visible {
    outline: -webkit-focus-ring-color auto 0;
}

#caca {
    background: rgb(255, 136, 17);
    background: linear-gradient(113deg, rgba(255, 136, 17, 1) 0%, rgba(244, 208, 111, 1) 100%);
}

form,
.count {
    display: flex;
    align-items: center;
    width: 70vw;
    justify-content: space-around;
}

form {
    flex-direction: column;
}

.count_btn {
    width: 40vw;
}

.add_remove_btn {
    background-color: #FF8811;
    border-radius: 50px;
    width: 40px;
    height: 40px;
    text-align: center;
    position: relative;
}

.add_remove_btn div {
    position: absolute;
    /* margin-left: auto;
    margin-right: auto; */
    margin: auto;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    background-color: white;
    height: 10%;
    width: 60%;
    border-radius: 15px;
}

.add_btn div:nth-child(2) {
    transform: rotate(90deg);
}

.button_active {
    background-color: #FCD772;
}

label {
    font-size: 1.5rem;
    font-family: Francois one;
    color: white;
}

input {
    all: unset;
    background-color: white;
    font-size: 1.5rem;
    font-family: Francois one;
    padding: 5px;
}

.username_entry {
    text-align: center;
    margin: 10px;
}

.theme_container {
    width: 100vw;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 20px;

}

.theme_container>.theme {
    all: unset;
    width: 150px;
    height: 150px;
    font-size: 2rem;
    font-family: Francois one;
    border-radius: 10%;
    color: #FFF8F0;
    background: #FF8811;
    background: linear-gradient(120deg, #F4D06F 0%, #EF476F 100%);
    /* border: solid #FCD772 1px; */
    filter: drop-shadow(0px 0px 5px #0000001a);
    position: relative;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: flex-end;
}

.theme>img {
    position: absolute;
    transform-origin: center;
    width: 115%;
    height: auto;
    transform: rotate(15deg);
    margin: auto;
    top: 0;
    bottom: 0;
    left: -7.5%;
    right: 0;
    z-index: -1;
    mix-blend-mode: overlay;
}

.theme>span {
    filter: drop-shadow(0px 0px 3px #000000be);
    /* color: transparent; */
}

.ofnames {
    max-height: 60vh;
    overflow-y: scroll;
}

.ofnames input {
    border-radius: 5px;
    color: rgba(0, 0, 0, 0.5);
}

.tc,
.pg {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
}

.rulesbtn {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#accueil {
    display: none;
}

#bubble-container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;
    overflow: hidden;
    /* z-index: -1; */
}

.bubble {
    position: absolute;
    bottom: -80px;
    border-radius: 50%;
    background: #EF467F;
    /* box-shadow: 0 0 10px #FCD772; */
    pointer-events: none;
}

#requestPermissionButton {
    position: absolute;
    bottom: 5px;
    right: 5px;
}

.countdown,
.timer {
    font-size: 2rem;
    font-family: Francois one;
    color: white;
}

.guess {
    font-size: 8rem;
    font-family: Francois one;
    color: white;
}

.elements_container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    background-repeat: no-repeat;
    background-position: center;
    background-size: 115vh auto;
    background-blend-mode: overlay;
    background-clip: unset;
    position: relative;
    overflow: hidden;
}

.bg-game {
    position: absolute;
    transform-origin: center;
    height: 115dvh;
    width: auto;
    transform: rotate(15deg);
    margin: auto;
    top: 0;
    bottom: 0;
    left: -7.5%;
    right: 0;
    mix-blend-mode: overlay;
}

